k8s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: danyakladnitsky/lct-2024.backend:latest
          resources:
            limits:
              cpu: 2
              memory: 2048Mi
            requests:
              cpu: 2
              memory: 1576Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 60а а
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
