k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: backend
